--- a/portfolio.html
+++ b/portfolio.html
@@ -80,14 +80,21 @@
           <!-- список работ -->
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <a class="portfolio-link" href="#"
-                ><img
-                  class="pic"
-                  src="./images/example1.jpg"
-                  alt="Изображение проекта 1"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example1.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Технокряк</h2>
                   <p class="portfolio-list-descr">Веб-сайт</p>
@@ -95,128 +102,184 @@
               >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example2.jpg"
-                  alt="Изображение проекта 2"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example2.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="portfolio-list-descr">Дизайн</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example3.jpg"
-                  alt="Изображение проекта 3"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example3.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Ресторан Seafood</h2>
                   <p class="portfolio-list-descr">Приложение</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example4.jpg"
-                  alt="Изображение проекта 4"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example4.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Проект Prime</h2>
                   <p class="portfolio-list-descr">Маркетинг</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example5.jpg"
-                  alt="Изображение проекта 5"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example5.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Проект Boxes</h2>
                   <p class="portfolio-list-descr">Приложение</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example6.jpg"
-                  alt="Изображение проекта 6"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example6.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">
                     Inspiration has no Borders
                   </h2>
                   <p class="portfolio-list-descr">Веб-сайт</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example7.jpg"
-                  alt="Изображение проекта 7"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example7.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Издание Limited Edition</h2>
                   <p class="portfolio-list-descr">Дизайн</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example8.jpg"
-                  alt="Изображение проекта 8"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example8.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Проект LAB</h2>
                   <p class="portfolio-list-descr">Маркетинг</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
             <li class="portfolio-list-item">
-              <a href="#" class="portfolio-link">
-                <img
-                  class="pic"
-                  src="./images/example9.jpg"
-                  alt="Изображение проекта 9"
-                  width="370"
-                  height="294"
-                />
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-overlay">
+                  <img
+                    class="pic"
+                    src="./images/example9.jpg"
+                    alt="Изображение проекта 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="card-bottom">
                   <h2 class="portfolio-list-title">Growing Business</h2>
                   <p class="portfolio-list-descr">Приложение</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
           </ul>
         </div>
