--- a/index.html
+++ b/index.html
@@ -641,16 +641,16 @@
     </footer>
 
     <!-- модальное окно -->
-    <div data-modal class="backdrop">
-      <div class="modal is-hidden">
+    <div data-modal class="backdrop is-hidden">
+      <div class="modal">
         <button class="close-btn" data-modal-close>
           <!-- <svg width="11px" height="11px" aria-label="Close">
             <use href="./images/close.svg"></use>
           </svg> -->
           <svg
             class="close-icon"
-            width="11"
-            height="11"
+            width="11px"
+            height="11px"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             --
