--- a/index.html
+++ b/index.html
@@ -647,7 +647,8 @@
           <!-- <svg width="11px" height="11px" aria-label="Close">
             <use href="./images/close.svg"></use>
           </svg> -->
-          <svg
+
+          <!-- <svg
             class="close-icon"
             width="11px"
             height="11px"
@@ -660,6 +661,9 @@
               d="M11 1.108 9.892 0 5.5 4.392 1.108 0 0 1.108 4.392 5.5 0 9.892 1.108 11 5.5 6.608 9.892 11 11 9.892 6.608 5.5 11 1.108Z"
               fill="#000"
             />
+          </svg> -->
+          <svg class="modal-icon" width="11px" height="11px" aria-label="Close">
+            <use href="./images/sprite.svg#icon-modal-close"></use>
           </svg>
         </button>
       </div>
